--- a/app/design/frontend/OleksiiBezpoiasnyi/luma/web/css/critical.css
+++ b/app/design/frontend/OleksiiBezpoiasnyi/luma/web/css/critical.css
@@ -57,7 +57,7 @@ body {
 }
 
 .page-header .panel.wrapper {
-    background-color: #00699d;
+    background-color: #6e716e;
     color: #fff
 }
 
@@ -114,7 +114,7 @@ body {
 }
 
 .copyright {
-    background-color: #00699d;
+    background-color: #6e716e;
     color: #fff;
     box-sizing: border-box;
     display: block;
@@ -317,15 +317,9 @@ body > .loading-mask {
     }
 
     .navigation .level0 > .level-top {
-        color: #fff;
-        font-weight: bold;
+        color: #575757;
         line-height: 47px;
         padding: 0 12px
-    }
-
-    .nav-sections,
-    .nav-sections-item-content .navigation {
-        background-color: #68a8e0;
     }
 
     .page-main {
@@ -333,7 +327,7 @@ body > .loading-mask {
     }
 
     .page-footer {
-        background: #68a8e0;
+        background: #f4f4f4;
         padding-bottom: 25px
     }
 
@@ -398,9 +392,5 @@ body > .loading-mask {
         width: 100vw;
         position: fixed;
         left: -100vw
-    }
-
-    a, a:visited, .action:hover {
-        color: #ff5501;
     }
 }
