#5 Less: change styles for reviews counter, menu tabs in mobile; rename _footer_nav.less in _header_nav.less

--- a/app/design/frontend/OleksiiBezpoiasnyi/luma/web/css/source/extend/_product_info.less
+++ b/app/design/frontend/OleksiiBezpoiasnyi/luma/web/css/source/extend/_product_info.less
@@ -1,5 +1,6 @@
 & when (@media-common = true) {
-    .product.info.detailed .product.data.items .item.title .switch {
+    .product.info.detailed .product.data.items .item.title .switch,
+    .data.switch .counter {
         background-color: @color-blue3;
         color: @color-white;
     }
@@ -8,7 +9,8 @@
     .product.info.detailed .product.data.items .item.title.active .switch,
     .product.info.detailed .product.data.items .item.title.active .switch:focus,
     .product.info.detailed .product.data.items .item.title.active .switch:hover,
-    .product.info.detailed .product.data.items .item.title .switch:hover {
+    .product.info.detailed .product.data.items .item.title .switch:hover,
+    .data.switch:hover .counter {
         background: @color-sky-blue1;
         color: @color-white;
         font-weight: bold;
