--- a/app/design/frontend/OleksiiBezpoiasnyi/luma/Magento_Catalog/layout/catalog_product_view.xml
+++ b/app/design/frontend/OleksiiBezpoiasnyi/luma/Magento_Catalog/layout/catalog_product_view.xml
@@ -2,5 +2,11 @@
 <page layout="1column" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <body>
         <move element="product.info.social" destination="product.info.main" after="page.main.title"/>
+        <referenceContainer name="product.info.main">
+            <block class="Magento\Framework\View\Element\Template"
+                   name="product.demo"
+                   before="product.info.details"
+                   template="OleksiiBezpoiasnyi_Catalog::product/view/demo_product.phtml"/>
+        </referenceContainer>
     </body>
 </page>
