--- a/app/design/frontend/OleksiiBezpoiasnyi/luma/Magento_Newsletter/templates/subscribe.phtml
+++ b/app/design/frontend/OleksiiBezpoiasnyi/luma/Magento_Newsletter/templates/subscribe.phtml
@@ -1,7 +1,13 @@
 <?php
 /** @var \Magento\Newsletter\Block\Subscribe $block */
+/** @var \Magento\Framework\Escaper $escaper */
 ?>
 <div class="block newsletter">
+    <div class="newsletter-message__wrap">
+        <p class="newsletter-message__text">
+            <?= $escaper->escapeHtml(__('Subscribe now to get special promo!')) ?>
+        </p>
+    </div>
     <div class="title"><strong><?= $block->escapeHtml(__('Newsletter')) ?></strong></div>
     <div class="content">
         <form class="form subscribe"
