--- a/app/code/OleksiiBezpoiasnyi/RegularCustomer/view/frontend/templates/catalog/product/view/button.phtml
+++ b/app/code/OleksiiBezpoiasnyi/RegularCustomer/view/frontend/templates/catalog/product/view/button.phtml
@@ -1,7 +1,12 @@
 <?php /** @var \Magento\Catalog\Block\Product\View $block */ ?>
 <?php /** @var \Magento\Framework\Escaper $escaper */ ?>
 
-<p class="oleksiib-regular-customers-cms"><?= $escaper->escapeHtml(__('Please register to participate in the loyalty program')) ?></p>
-<button class="action primary" data-mage-init='{"oleksiibRegularCustomersButton": {}}'>
-    <span><?= $escaper->escapeHtml(__('Participate in the program')) ?></span>
-</button>
+<div>
+    <p class="oleksiib-regular-customers-cms"><?= $escaper->escapeHtml(__('Please register to participate in the loyalty program')) ?></p>
+    <button class="action primary"
+            data-mage-init='{"oleksiibRegularCustomersButton":{
+            "url": "<?= $escaper->escapeJs($block->getUrl('oleksiib_regular_customers/loyaltyProgram/productList')) ?>"
+    }}'>
+        <span><?= $escaper->escapeHtml(__('Participate in the program')) ?></span>
+    </button>
+</div>
