#13 Cookies. Session. Session storage: changed the way to get the current Product Id in controllers

--- a/app/code/OleksiiBezpoiasnyi/RegularCustomer/view/frontend/templates/catalog/product/view/button.phtml
+++ b/app/code/OleksiiBezpoiasnyi/RegularCustomer/view/frontend/templates/catalog/product/view/button.phtml
@@ -5,7 +5,8 @@
     <p class="oleksiib-regular-customers-cms"><?= $escaper->escapeHtml(__('Please register to participate in the loyalty program')) ?></p>
     <button class="action primary"
             data-mage-init='{"oleksiibRegularCustomersButton":{
-            "url": "<?= $escaper->escapeJs($block->getUrl('oleksiib_regular_customers/loyaltyProgram/productList')) ?>"
+            "url": "<?= $escaper->escapeJs($block->getUrl('oleksiib_regular_customers/loyaltyProgram/productList')) ?>",
+            "productId": "<?= $escaper->escapeJs($block->getProduct()->getId()) ?>"
     }}'>
         <span><?= $escaper->escapeHtml(__('Participate in the program')) ?></span>
     </button>
