--- a/app/code/OleksiiBezpoiasnyi/RegularCustomer/view/frontend/templates/catalog/product/view/form.phtml
+++ b/app/code/OleksiiBezpoiasnyi/RegularCustomer/view/frontend/templates/catalog/product/view/form.phtml
@@ -6,7 +6,8 @@
           id="loyalty-program-form"
           method="post"
           data-mage-init='{"oleksiibRegularCustomersForm":{
-              "action": "<?= $escaper->escapeJs($block->getUrl('oleksiib_regular_customers/loyaltyProgram/registration')) ?>"
+              "action": "<?= $escaper->escapeJs($block->getUrl('oleksiib_regular_customers/loyaltyProgram/registration')) ?>",
+              "productId": "<?= $escaper->escapeJs($block->getProduct()->getId()) ?>"
           }}'
           onsubmit="return false;"
     >
