#14 Caching. Full Page Cache (FPC): implement button hiding and message showing if the product has already been requested

--- a/app/code/OleksiiBezpoiasnyi/RegularCustomer/view/frontend/templates/catalog/product/view/form.phtml
+++ b/app/code/OleksiiBezpoiasnyi/RegularCustomer/view/frontend/templates/catalog/product/view/form.phtml
@@ -7,7 +7,7 @@
           method="post"
           data-mage-init='{"oleksiibRegularCustomersForm":{
               "action": "<?= $escaper->escapeJs($block->getUrl('oleksiib_regular_customers/loyaltyProgram/registration')) ?>",
-              "productId": "<?= $escaper->escapeJs($block->getProduct()->getId()) ?>"
+              "productId": <?= $escaper->escapeJs($block->getProduct()->getId()) ?>
           }}'
           onsubmit="return false;"
     >
