--- a/app/code/OleksiiBezpoiasnyi/RegularCustomer/view/frontend/layout/catalog_product_view.xml
+++ b/app/code/OleksiiBezpoiasnyi/RegularCustomer/view/frontend/layout/catalog_product_view.xml
@@ -3,7 +3,7 @@
     <body>
         <referenceBlock name="product.info.details">
             <block class="Magento\Framework\View\Element\Text\ListText"
-                   name="oleksiib.regular.customer.tab"
+                   name="oleksiib-regular-customer-tab"
                    group="detailed_info"
             >
                 <arguments>
@@ -18,19 +18,14 @@
                         <argument name="block_id" xsi:type="string">regular-customers</argument>
                     </arguments>
                 </block>
-                <block class="Magento\Catalog\Block\Product\View"
-                       name="oleksiib.regular.customer.button"
+                <block class="OleksiiBezpoiasnyi\RegularCustomer\Block\Product\View\PersonalDiscount"
+                       name="oleksiib-regular-customer-button"
                        template="OleksiiBezpoiasnyi_RegularCustomer::catalog/product/view/button.phtml"
                        group="detailed_info"
                 />
-                <block class="OleksiiBezpoiasnyi\RegularCustomer\Block\Product\View\PersonalDiscountForm"
-                       name="oleksiib.regular.customer.form"
+                <block class="OleksiiBezpoiasnyi\RegularCustomer\Block\Product\View\PersonalDiscount"
+                       name="oleksiib-regular-customer-form"
                        template="OleksiiBezpoiasnyi_RegularCustomer::catalog/product/view/form.phtml"
-                       group="detailed_info"
-                />
-                <block class="Magento\Framework\View\Element\Template"
-                       name="oleksiib.regular.customer.message"
-                       template="OleksiiBezpoiasnyi_RegularCustomer::catalog/product/view/message.phtml"
                        group="detailed_info"
                 />
             </block>
