--- a/app/code/OleksiiBezpoiasnyi/RegularCustomer/view/frontend/templates/catalog/product/view/form.phtml
+++ b/app/code/OleksiiBezpoiasnyi/RegularCustomer/view/frontend/templates/catalog/product/view/form.phtml
@@ -1,55 +1,21 @@
-<?php /** @var \OleksiiBezpoiasnyi\RegularCustomer\Block\Product\View\PersonalDiscountForm $block */ ?>
+<?php /** @var \OleksiiBezpoiasnyi\RegularCustomer\Block\Product\View\PersonalDiscount $block */ ?>
 <?php /** @var \Magento\Framework\Escaper $escaper */ ?>
-<div style="display: none;">
-    <form class="form"
-          action="javascript:void(0);"
-          id="loyalty-program-form"
-          method="post"
-          data-mage-init='{"oleksiibRegularCustomersForm":{
-              "action": "<?= $escaper->escapeJs($block->getUrl('oleksiib_regular_customers/loyaltyProgram/registration')) ?>",
-              "productId": <?= $escaper->escapeJs($block->getProduct()->getId()) ?>
-          }}'
-          onsubmit="return false;"
-    >
-        <fieldset class="fieldset">
-            <legend class="legend">
-                <span><?= $escaper->escapeHtml(__('Registration in Loyalty Program')) ?></span>
-            </legend>
-            <br/>
-            <div class="field name required">
-                <label class="label" for="name">
-                    <span><?= $escaper->escapeHtml(__('Name')) ?></span>
-                </label>
-                <div class="control">
-                    <input name="name"
-                           title="<?= $escaper->escapeHtmlAttr(__('Name')) ?>"
-                           class="input-text"
-                           type="text"
-                           data-validate="{required:true}"
-                    />
-                </div>
-            </div>
-            <div class="field email required">
-                <label class="label" for="email">
-                    <span><?= $escaper->escapeHtml(__('Email')) ?></span>
-                </label>
-                <div class="control">
-                    <input name="email"
-                           title="<?= $escaper->escapeHtmlAttr(__('Email')) ?>"
-                           class="input-text"
-                           type="email"
-                           data-validate="{required:true, 'validate-email':true}"
-                    />
-                </div>
-            </div>
-        </fieldset>
-        <div class="actions-toolbar">
-            <div class="primary">
-                <input type="hidden" name="hideit" id="hideit" value=""/>
-                <button type="submit" title="<?= $escaper->escapeHtmlAttr(__('Register')) ?>" class="action submit primary">
-                    <span><?= $escaper->escapeHtml(__('Register')) ?></span>
-                </button>
-            </div>
-        </div>
-    </form>
+<div data-bind="scope: 'loyaltyProgramForm'">
+    <!-- ko template: getTemplate() --><!-- /ko -->
 </div>
+
+<script type="text/x-magento-init">
+    {
+        "*": {
+            "Magento_Ui/js/core/app": {
+                "components": {
+                    "loyaltyProgramForm": {
+                        "component": "oleksiibRegularCustomersForm",
+                        "action": "<?= $escaper->escapeJs($block->getUrl('oleksiib_regular_customers/loyaltyProgram/registration')) ?>",
+                        "productId": <?= (int) $block->getProduct()->getId() ?>
+                    }
+                }
+            }
+        }
+    }
+</script>
