#17 Configurations and ACL: implemented ability to disable the whole module, to disable sending requests by guests and removed user-specific fields when the customer is logged in

--- a/app/code/OleksiiBezpoiasnyi/RegularCustomer/view/frontend/layout/catalog_product_view.xml
+++ b/app/code/OleksiiBezpoiasnyi/RegularCustomer/view/frontend/layout/catalog_product_view.xml
@@ -6,6 +6,7 @@
             <block class="Magento\Framework\View\Element\Text\ListText"
                    name="oleksiib-regular-customer-tab"
                    group="detailed_info"
+                   ifconfig="oleksii_b_personal_discount/general/enabled"
             >
                 <arguments>
                     <argument name="sort_order" xsi:type="string">40</argument>
