--- a/app/code/OleksiiBezpoiasnyi/RegularCustomer/view/frontend/layout/oleksiib_regular_customers_view_index.xml
+++ b/app/code/OleksiiBezpoiasnyi/RegularCustomer/view/frontend/layout/oleksiib_regular_customers_view_index.xml
@@ -10,6 +10,7 @@
                    name="loyalty.program"
                    template="OleksiiBezpoiasnyi_RegularCustomer::customer/account/view.phtml"
                    cacheable="false"
+                   ifconfig="oleksii_b_personal_discount/general/enabled"
             />
         </referenceContainer>
     </body>
