--- a/app/code/OleksiiBezpoiasnyi/RegularCustomer/view/frontend/layout/customer_account.xml
+++ b/app/code/OleksiiBezpoiasnyi/RegularCustomer/view/frontend/layout/customer_account.xml
@@ -4,6 +4,7 @@
         <referenceBlock name="customer_account_navigation">
             <block class="Magento\Customer\Block\Account\SortLinkInterface"
                    name="customer-account-navigation-loyalty_program"
+                   ifconfig="oleksii_b_personal_discount/general/enabled"
             >
                 <arguments>
                     <argument name="path" xsi:type="string">oleksiib_regular_customers/view/index</argument>
